--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ body{
     margin: 0%;
 }
 
-
                 /****ACTION SIDEBAR ****/
 #actionBar{
     background-color: #ffff1a;
@@ -19,18 +18,62 @@ body{
 }
 #actionsList ul{
     list-style-type: none;
-    padding-left: 20%;
-    font-size: 22px;
-    
+    font-size: 19px;
+    margin: 0;
+    padding: 0;
+}
+#actionsList  button{
+    border-radius: 10px;
+    padding: 2px 12px 5px 9px;
 }
 /*for glyphs*/
 #actionsList span{
     padding-right: 5px;
 }
-                /****DISPLAY CONTAINER ****/
-/*SEARCH DIV*/
+                /****ACTION BUTTON DISPLAY  ****/
+/*foodOptionsTemp - Template*/
+.actionButtonBackground{
+    background-color: black;	
+    -moz-opacity: 0.8;	
+    opacity:.8;	
+    filter: alpha(opacity=80);	
+    position:absolute;	
+    top:0;	
+    left:0;	
+    right:0;	
+    bottom:0;	
+    z-index:2;
+}
+#newEntryInput{
+    position:absolute;
+	left:30%;
+	top:30%;
+    z-index:3;
+    width: 590px;
+    height: 285px;
+    background-color: #ffffb3;
+    border-radius: 30px;
+}
+#newEntryInput > h3 {
+    color: black;
+    padding-top: 20px;
+    padding-bottom:20px;
+}
+#searchFood input:first-child {
+    width: 100%;
+    font-size: 22px;
+    padding-left: 10px;
+    
+}
+                /****DISPLAY FOOD SEARCHES ****/
+/*INPUT DIV*/
 #searchDiv{
+    padding: 0;
+}
+#mainInputContainer{
     background-color: #666666;
+    margin: 0;
+    
 }
 #mainInput{
     background-color: #666666;
@@ -38,20 +81,37 @@ body{
     border-style: solid;
     border-color: black;
     width: 70%;
-    margin: 25px 0;
+    margin: 25px 0 25px 10px;
     color: white;
     font-size: 35px;
+    padding-left:12px;
 }
 #mainInput:focus {
     outline: none;
 }
+/*RESULTS DIV*/
+#resultsContainer{
+    background-color: #cccccc;
+    padding: 10px 30px;
+    height: 701px;
+    overflow:scroll;
+    
+}
+#resultsContainer button{
+    margin-bottom: 10px;
+}
+.foodOption{
+    border-bottom: thin solid black;
+}
+.foodOptionDetails{
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+                /****DISPLAY FOOD ENTRIES ****/
 /*FOOD LOG*/
 #foodLog{
     background-color: white;
-    border-radius: 15px;
-    width:100%;
-    height: 600px;
-    margin-top: 30px;
+    height:805px;
     
 }
 #foodLog > h3{
@@ -62,6 +122,11 @@ body{
 }
 #foodLogDynamic{
     width: 100%;
-    height: 460px;
+    height: 660px;
     overflow:scroll;
+}
+#foodLogDynamic li{
+    list-style-type: none;
+    font-size: 20px;
+    padding-top: 6px;
 }
