--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,6 @@ body{
 }
 #foodLogDynamic button{
     margin-left: 20px;
-    /*padding: 0px 0px;*/
+    padding: 3px 7px 3px 6px;
     font-size: 10px;
 }
