Added padding, overflow scroll, and misc css to dynamic containers

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,9 @@ container {
     border: none;
     padding-top: 18px;
     padding-bottom: 18px;
+    -webkit-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.66);
+    -moz-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.66);
+    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.66);
 }
 #newEntryButton  span{
     font-size: 25px;
@@ -73,6 +76,7 @@ container {
     padding: 0;
     margin-top: 15px;
 }
+
 /*SEARCH RESULTS DISPLAY */
 #searchDivTitleContainer{
     background-color: #fffae6;
@@ -85,6 +89,8 @@ container {
 #resultsContainer{
     height: 600px;
     background-color:white;
+    padding: 0 15px 15px;
+    overflow: scroll;
     
 }
 /*FOOD ENTRIES DISPLAY*/
@@ -101,7 +107,7 @@ container {
 }
 #dynamicContainer{
     background-color:white;
-    
+    padding: 0 15px 15px;
 }
 #foodLogDynamic{
     height: 550px;
@@ -109,3 +115,18 @@ container {
 #calorieCounter{
     padding: 0 0 1px 14px;
 }
+                /************TEMPLATES***************/
+/*for both templates */
+.appButton{
+    margin-left: 15px;
+    border: none;
+    border-radius: 3px;
+    -webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.66);
+    -moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.66);
+    box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.66);
+}
+/*SEARCH RESULTS TEMPLATE*/
+.foodOption button{
+    background-color: #40bf40;
+}
+/*FOOD ENTRIES TEMPLATE*/
