Added loading gif to display while ajax call is being fetched

--- a/css/main.scss
+++ b/css/main.scss
@@ -122,6 +122,9 @@ container {
     overflow: scroll;
     
 }
+#loadingIcon{
+  padding-top: 40px;
+}
 /*FOOD ENTRIES DISPLAY*/
 
 #foodDivTitleContainer{
