--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,9 @@ container {
   padding: 0 15px 15px;
   overflow: scroll; }
 
+#loadingIcon {
+  padding-top: 40px; }
+
 /*FOOD ENTRIES DISPLAY*/
 #foodDivTitleContainer {
   background-color: #fffae6;
