--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+/*** CSS VARIABLES***/
+/***MEDIA QUARIES***/
+/***MIXINS***/
 body {
   font-family: 'Titillium Web', sans-serif;
   background-color: #f5f8fa; }
@@ -94,11 +97,11 @@ container {
     margin-right: 0; } }
 
 .bigContainer {
-  -webkit-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.66);
-  -moz-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.66);
-  box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.66);
   padding: 0;
-  margin-top: 15px; }
+  margin-top: 15px;
+  -webkit-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.66);
+  -moz-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.66);
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.66); }
 
 /*SEARCH RESULTS DISPLAY */
 #searchDivTitleContainer {
