--- a/css/main.scss
+++ b/css/main.scss
@@ -132,7 +132,7 @@ container {
     padding-bottom: 12px;
 }
 #resultsContainer{
-    height: 600px;
+    height: 70vh;
     background-color:white;
     padding: 0 15px 15px;
     overflow: scroll;
@@ -159,7 +159,7 @@ container {
     
 }
 #foodLogDynamic{
-    height: 550px;
+    height: 60vh;
     overflow: scroll;
 }
 #calorieCounter{
